[package]
name = "redis-batches"
version = "0.1.2"
edition = "2021"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A library that mediates batches using Redis."
repository = "https://github.com/UniqueVision/redisb-batches-rs"
keywords = ["redis"]
readme = "README.md"
documentation = "https://docs.rs/redis-batches"

[dependencies]
once_cell = "1.15.0"
redis = { version = "0.22", features = ["script", "aio"]}

[features]
default = ["tokio-comp"]
tokio-comp = ["redis/tokio-comp"]
async-std-comp = ["redis/async-std-comp"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }